--- a/.gitignore
+++ b/.gitignore
@@ -114,7 +114,7 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
+./dist/*
 ### Web ###
 
 # End of https://www.gitignore.io/api/web,osx,node
