--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
+    "@types/js-clipper": "0.0.28",
     "@types/lodash": "^4.14.134",
     "@types/victor": "^1.1.0",
     "typescript": "^3.5.1"
