--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "install": "tsc"
+    "install": "tsc -p tsconfig.json"
   },
   "types": "dist/index.d.ts",
   "author": "Ruby Quail",
