--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "Ruby Quail",
   "license": "ISC",
   "dependencies": {
+    "@types/p5": "^0.7.2",
     "d3": "^5.9.2",
     "js-clipper": "^1.0.1",
     "lodash": "^4.17.11",
     "simplex-noise": "^2.4.0",
-    "@types/p5": "^0.7.2",
     "victor": "^1.1.0"
   },
   "devDependencies": {
@@ -22,5 +22,7 @@
     "@types/lodash": "^4.14.134",
     "@types/victor": "^1.1.0",
     "typescript": "^3.5.1"
-  }
+  },
+  "repository": "https://rupertofly@github.com/Rupertofly/ruby-utils.git",
+  "private": false
 }
