--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,12 @@
     "sourceMap": false,
     "noImplicitAny": false,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
-    "lib": ["esnext", "dom"],
     "esModuleInterop": true,
     "moduleResolution": "node"
   },
-  "include": ["index.ts", "./src/*"]
+  "exclude": ["node_modules", "dist", "wip"]
 }
