--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rupertofly/rubyq-utils",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "myUtils",
   "main": "dist/index.js",
   "scripts": {
@@ -11,17 +11,12 @@
   "author": "Ruby Quail",
   "license": "ISC",
   "dependencies": {
-    "@types/p5": "^0.7.2",
     "d3": "^5.9.2",
     "js-clipper": "^1.0.1",
-    "lodash": "^4.17.11",
-    "simplex-noise": "^2.4.0",
-    "victor": "^1.1.0"
+    "simplex-noise": "^2.4.0"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
-    "@types/lodash": "^4.14.134",
-    "@types/victor": "^1.1.0",
     "typescript": "^3.5.1"
   },
   "repository": "https://rupertofly@github.com/Rupertofly/ruby-utils.git",
