--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "d3": "^5.9.2",
     "js-clipper": "^1.0.1",
+    "regl": "^1.3.13",
     "simplex-noise": "^2.4.0"
   },
   "devDependencies": {
