--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "forTesting": "parcel test/index.html -d test/dist --cache-dir test/.cache"
   },
   "types": "dist/index.d.ts",
   "author": "Ruby Quail",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
+    "parcel-bundler": "^1.12.4",
     "typescript": "^3.5.1"
   },
   "repository": "https://rupertofly@github.com/Rupertofly/ruby-utils.git",
